[package]
name = "bongo-cat-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = "0.5.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", features = ["tokio"] }