[workspace]
members = ["."]

[package]
name = "bongo-cat-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = "0.5.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", features = ["tokio"] }
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"

[target.'cfg(not(target_os = "linux"))'.dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["dep:clap"]